Addded Group Memebers Directly to Python Notebook

--- a/Lab1_Understanding Feedforward Neural Network.ipynb
+++ b/Lab1_Understanding Feedforward Neural Network.ipynb
@@ -2,6 +2,15 @@
  "cells": [
   {
    "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Group Members \n",
+    "- Kyle Whynott\n",
+    "- Brandon Winkler"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "metadata": {
     "id": "be6QWnmo_90p"
    },
